# Dimorf

./: .gitignore  LICENSE.txt  README.md  array.py  beforeofall.py  dimorf.py  dimorf.yar  hidden_dimorf.py  pyproject.toml  requirements.txt  sla.py  teste.py
